# TEST_TASK_projects

./: README.md  circlebuff_API.hpp
ByteOperationSum/: CMakeLists.txt  README.md  main.cpp
FindSubCollectionSum/: CMakeLists.txt  README.md  find.h  main.cpp
MultithreadImageProcessing/: CMakeLists.txt  README.txt  luxoft_profile.ppm
MultithreadImageProcessing/test_cpp/: Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h  Test.cpp  Test.h  Timer.cpp  Timer.h  jpeg_decoder.h  main.cpp
PermutationWords/: CMakeLists.txt  README.md  main.cpp
Qt_bitmap_udp_sender/: CMakeLists.txt
Qt_bitmap_udp_sender/udp_client/: opengl_widget.cpp  udp_client.cpp  udp_client.h
Qt_bitmap_udp_sender/udp_server/: CMakeLists.txt  Makefile  udp_server.cpp  udp_server.h
RingBuffer/: CMakeLists.txt
RingBuffer/libbuffer/: CMakeLists.txt
RingBuffer/unit_test/: CMakeLists.txt
Substring_find_test/: CMakeLists.txt  main.cpp
TestChallenge_for_55_min/: CMakeLists.txt  Readme.md  main.cpp
Trade_Engine/: CMakeLists.txt  main.cpp  tech_assignment_rev_3.txt
Unique_words_counter/: CMakeLists.txt  README.txt  data.txt  parser.cpp
bitmap_picture_sender_Qt/: README.md
bitmap_picture_sender_Qt/udp_client/: CMakeLists.txt  main.cpp  opengl_widget.h
bitmap_picture_sender_Qt/udp_server/: config.h  main.cpp
highperf_epoll/: Makefile  README.md  client_main.cpp
highperf_epoll/include/: protocol.hpp
highperf_epoll/src/: parser.cpp  parser.h  server.c
highperf_epoll/tests/: stress_test.cpp
libbuffer/: circle_buffer.cpp  circle_buffer.hpp  message.hpp
linux-server/: CMakeLists.txt  README.md
linux-server/client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
linux-server/common/: protocol.cpp  protocol.h  validator.cpp  validator.h
linux-server/server/: CMakeLists.txt  clienthandler.cpp  clienthandler.h  main.cpp
linux-server/tests/: CMakeLists.txt  tst_protocol.cpp
think-cell-master/src/: CMakeLists.txt
think-cell-master/src/interval_map/: interval_map.h
think-cell-master/src/interval_map_test/: interval_map.test.cpp
unit_test/: test_circle_buff.cpp
